[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autoencoders"
version = "0.1.0"
description = "A unified library for autoencoder-family models across deterministic, variational, and quantized latent spaces."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "autoencoders contributors" }
]
keywords = ["autoencoder", "vae", "vq-vae", "representation-learning", "pytorch", "latent-models"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Jyonn/autoencoders"
Repository = "https://github.com/Jyonn/autoencoders"
Issues = "https://github.com/Jyonn/autoencoders/issues"

[project.optional-dependencies]
torch = ["numpy>=1.26", "torch>=2.2"]
dev = ["build>=1.2", "twine>=5.1"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["autoencoders*"]
