[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autoencoders"
version = "0.3.0"
description = "A unified library for autoencoder-family models across deterministic, variational, and quantized latent spaces."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "autoencoders contributors" }
]
keywords = ["autoencoder", "vae", "vq-vae", "representation-learning", "pytorch", "latent-models"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/Jyonn/autoencoders"
Repository = "https://github.com/Jyonn/autoencoders"
Issues = "https://github.com/Jyonn/autoencoders/issues"

[project.optional-dependencies]
torch = ["numpy>=1.26", "torch>=2.2"]
text = ["sentence-transformers>=3.0"]
clip = ["datasets>=2.19", "open_clip_torch>=2.24", "pillow>=10"]
all = ["numpy>=1.26", "torch>=2.2", "sentence-transformers>=3.0", "datasets>=2.19", "open_clip_torch>=2.24", "pillow>=10"]
dev = ["build>=1.2", "twine>=5.1", "mkdocs>=1.6", "mkdocs-material>=9.5"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["autoencoders*"]
